--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,30 +16,23 @@
   "dependencies": {
     "@decorators/di": "^1.0.2",
     "@decorators/express": "^2.3.0",
-    "awilix": "^4.2.5",
     "bcrypt": "^4.0.1",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "enum": "^3.0.3",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-decorators": "^1.2.1",
-    "glob": "^7.1.6",
     "http-errors": "^1.7.3",
     "http-status": "^1.4.2",
-    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
     "rand-token": "^1.0.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "^0.13.5",
-    "typeorm": "^0.2.24"
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
