--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
+    "mongoose": "^5.10.3",
     "multer": "^1.4.2",
     "rand-token": "^1.0.1",
     "redis": "^3.0.2",
@@ -43,10 +44,20 @@
     "@babel/preset-env": "^7.9.5",
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "husky": "^4.2.5",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prettier": "^2.1.1"
   },
   "husky": {
     "hooks": {
