--- a/users/package.json
+++ b/users/package.json
@@ -27,7 +27,6 @@
     "http-errors": "^1.7.3",
     "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.26.0",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
     "rand-token": "^1.0.1",
@@ -47,8 +46,7 @@
     "eslint": "^7.2.0",
     "husky": "^4.2.5",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.2",
-    "prettier": "^2.1.1"
+    "nodemon": "^2.0.2"
   },
   "husky": {
     "hooks": {
