--- a/users/package.json
+++ b/users/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
+    "passport-jwt": "^4.0.0",
     "rand-token": "^1.0.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
